--- a/changes
+++ b/changes
@@ -1,9 +1,15 @@
 ================================================================================
-Important changes and bug fixes in the release v1   -8/21/2022
+Important changes and bug fixes in the release v1   9/10/2022
 ================================================================================
-- Implemented:  
-- Changed: 
-- Changed: 
-- Bug fix: 
-- Implemented: 
+- Implemented:   roles module
+- Changed:  --
+- Bug fix:  --
+
+
+================================================================================
+Important changes and bug fixes in the release v1   9/20/2022
+================================================================================
+- Implemented:  user modules add -| tr and eng language
+- Changed:  --
+- Bug fix:  --
 
