--- a/public/locales/tr_TR/LC_MESSAGES/roles.po
+++ b/public/locales/tr_TR/LC_MESSAGES/roles.po
@@ -1,9 +1,11 @@
-"Project-Id-Version: KurbanBook\n"
+msgid ""
+msgstr ""
+"Project-Id-Version: go-cms\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Selman Tunc <selmantunc@gmail.com>\n"
 "Language-Team: \n"
-"Language: en_US\n"
+"Language: tr_TR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,10 +41,10 @@ msgid "Close"
 msgstr ""
 
 msgid "New Add"
-msgstr " "
+msgstr "Yeni Ekle"
 
 msgid "Roles List"
-msgstr " "
+msgstr "Roller Listesi"
 
 msgid "Edit"
 msgstr ""
