--- a/public/locales/en_US/LC_MESSAGES/dashboard.po
+++ b/public/locales/en_US/LC_MESSAGES/dashboard.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: Selman Tunc <selmantunc@gmail.com>\n"
 "Language-Team: \n"
-"Language: tr_TR\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,26 +13,5 @@ msgstr ""
 "X-Generator: Poedit 3.1.1\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-msgid "Post"
-msgstr "Sayfalar"
-
-msgid "Post Create"
-msgstr "Sayfa Olustur"
-
-msgid "Setting"
-msgstr "Ayarlar"
-
-msgid "Roles"
-msgstr "Roller"
-
-msgid "New Roles"
-msgstr "Yeni Rol"
-
-msgid "Users"
-msgstr "Kullanicilar"
-
-msgid "Logout"
-msgstr "Cikis"
-
-msgid "Menu"
-msgstr "Menu"
+msgid "Dashboard"
+msgstr ""
